il mio èè sbagliato. Guardare alberto

--- a/templates/result.html
+++ b/templates/result.html
@@ -6,10 +6,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/style.css">
     <title>Risultati Ricerca</title>
-    <style>
-        /* Stili personalizzati */
-        /* Aggiungi stili personalizzati qui */
-    </style>
 </head>
 <body>
 <div class="container mt-5">
@@ -18,110 +14,46 @@
     <div class="accordion" id="chieseAccordion">
         {% for chiesa in chiese %}
         <div class="card">
-            <div class="card-header" id="chiesa{{ chiesa['Codice Chiesa'] }}">
-                <h3 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse1{{ chiesa['Codice Chiesa'] }}" aria-expanded="true" aria-controls="collapse{{ chiesa['Codice Chiesa'] }}">
-                        Reperts
+            <div class="card-header" id="heading{{ chiesa['Codice Chiesa'] }}">
+                <h2 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
+                        {{ chiesa['Local Name'] }}
                     </button>
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse2{{ chiesa['Codice Chiesa'] }}" aria-expanded="true" aria-controls="collapse{{ chiesa['Codice Chiesa'] }}">
-                        Floor
-                    </button>
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse3{{ chiesa['Codice Chiesa'] }}" aria-expanded="true" aria-controls="collapse{{ chiesa['Codice Chiesa'] }}">
-                        Church floor Plan
-                    </button>
-                </h3>
+                </h2>
             </div>
-            <div id="collapse1{{ chiesa['Codice Chiesa'] }}" class="collapse" aria-labelledby="chiesa{{ chiesa['Codice Chiesa'] }}" data-parent="#chieseAccordion">
+
+            <div id="collapse{{ loop.index }}" class="collapse" aria-labelledby="heading{{ chiesa['Codice Chiesa'] }}" data-parent="#chieseAccordion">
                 <div class="card-body">
-                    <p>Indirizzo: {{ chiesa['Indirizzo'] }}</p>
                     <h4>Reperti:</h4>
-                    <ul class="list-group">
-                        {% for reperto in reperti %}
-                        {% if reperto['Codice Chiesa'] == chiesa['Codice Chiesa'] %}
-                        <li class="list-group-item">
-                            <h5>Nome Reperto: {{ reperto['Nome Reperto'] }}</h5>
-                            <!-- Aggiunta delle immagini del reperto -->
+                    {% for reperto in reperti %}
+                    {% if reperto['Codice Chiesa'] == chiesa['Church Code'] %}
+                    <div class="list-group mb-3">
+                        <div class="list-group-item">
+                            <h5 class="mb-1">{{ reperto['Codice Reperto'] }}</h5>
                             {% if reperto.image_urls %}
-                            {% for url in reperto.image_urls %}
-                            <div class="relic-container">
-                                <div class="image-container">
-                                    <img src="{{ url }}" alt="Immagine di {{ reperto['Codice Reperto'] }}" class="img-fluid" data-image-url="{{ url }}">
-                                </div>
-                                <div class="inscription-container">
-                                    <p class="latin-inscription">Inscrizione Latina: <br>{{ reperto['Latino'] }}</p>
-                                </div>
+                            <div class="relic-image-container mb-2">
+                                {% for url in reperto.image_urls %}
+                                <img src="{{ url }}" alt="Immagine di {{ reperto['Nome Reperto'] }}" class="img-thumbnail">
+                                {% endfor %}
                             </div>
-                            {% endfor %}
                             {% else %}
-                            <p>Nessuna immagine disponibile.</p>
+                            <p>Nessuna immagine disponibile per questo reperto.</p>
                             {% endif %}
-                            <p>Altro Materiale: {{ reperto['Altro Materiale'] }}</p>
-                        </li>
-                        {% endif %}
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-            <div id="collapse2{{ chiesa['Codice Chiesa'] }}" class="collapse" aria-labelledby="chiesa{{ chiesa['Codice Chiesa'] }}" data-parent="#chieseAccordion">
-                <div class="card-body">
-                    {% if floor_images %}
-                    <h4>Foto dei Pavimenti:</h4>
-                    {% for url in floor_images %}
-                    <div class="floor-image-container">
-                        <img src="{{ url }}" alt="Immagine del pavimento della chiesa {{ chiesa['Codice Chiesa'] }}" class="img-fluid">
+                            <p>{{ reperto['Descrizione'] }}</p>
+                        </div>
                     </div>
-                    {% endfor %}
-                    {% else %}
-                    <p>Nessuna foto dei pavimenti disponibile.</p>
                     {% endif %}
-                </div>
-            </div>
-            <div id="collapse3{{ chiesa['Codice Chiesa'] }}" class="collapse" aria-labelledby="chiesa{{ chiesa['Codice Chiesa'] }}" data-parent="#chieseAccordion">
-                <div>
-                    {% if general_images %}
-                    <h4>Foto Generali:</h4>
-                    {% for url in general_images %}
-                    <div class="general-image-container">
-                        <img src="{{ url }}" alt="Immagini generali della chiesa {{ chiesa['Codice Chiesa'] }}" class="img-fluid">
-                    </div>
                     {% endfor %}
-                    {% else %}
-                    <p>Nessuna foto disponibile.</p>
-                    {% endif %}
                 </div>
             </div>
         </div>
         {% endfor %}
     </div>
     {% else %}
-    {% if query %}
     <p>Nessun risultato trovato per "{{ query }}".</p>
     {% endif %}
-    {% endif %}
-    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <img src="" class="img-fluid" id="modalImage" alt="Immagine ingrandita">
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
-<script>
-    // Seleziona tutti gli elementi con classe 'image-container'
-    var images = document.querySelectorAll('.image-container');
 
-    // Aggiungi un listener di evento 'click' a ciascun elemento
-    images.forEach(function(image) {
-        image.addEventListener('click', function() {
-            var modalImage = document.getElementById('modalImage');
-            var imageURL = this.querySelector('img').getAttribute('src');
-            modalImage.src = imageURL;
-            $('#imageModal').modal('show');
-        });
-    });
-</script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
