--- a/templates/result.html
+++ b/templates/result.html
@@ -9,6 +9,24 @@
 </head>
 <body>
 <div class="container">
+    <!-- Modal per l'immagine ingrandita -->
+    <div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="imageModalLabel">Anteprima Immagine</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="" id="modalImage" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <h2>Risultati della ricerca per "{{ chiesa }}"</h2>
     <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" aria-haspopup="true" aria-expanded="false">
@@ -40,12 +58,22 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
         // Mostra i reperti quando il pulsante viene cliccato
-        $(".dropdown-toggle").click(function() {
+        $(".dropdown-toggle").click(function () {
             $("#repertiRow").toggle();
         });
     });
+
+    $(document).ready(function() {
+        // Gestisce il clic sulle immagini della card
+        $('.card-img-top').click(function () {
+            var src = $(this).attr('src'); // Prende il src dell'immagine cliccata
+            $('#modalImage').attr('src', src); // Imposta il src nel modal image
+            $('#imageModal').modal('show'); // Mostra il modal
+        });
+    });
+
 </script>
 </body>
 </html>
