--- a/static/style.css
+++ b/static/style.css
@@ -67,31 +67,39 @@ h2 {
     justify-content: center;
     gap: 20px;
 }
-
-.map-container {
+.map-container{
     width: 100%;
     max-width: 1200px;
     margin: auto;
     padding: 0 2rem;
 }
 
-#viewDiv {
+#viewDiv{
     height: 700px;
     width: 100%;
 }
 
 .modal-content {
     background-color: #ffe; /* Sfondo beige per mantenere il tema */
+    color: #333; /* Testo scuro */
     border-radius: 20px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.15); /* Ombra per enfasi */
 }
 
-.modal-title, .close {
+.modal-title {
     color: #963; /* Colorazione coerente con gli altri titoli */
+}
+
+.close {
+    color: #963; /* Colorazione coerente */
+    opacity: 1; /* Assicurati che sia ben visibile */
 }
 
 .modal-header, .modal-body {
     padding: 20px;
+}
+
+.modal-header {
     border-bottom: 1px solid #963; /* Aggiungi un bordo per coerenza stilistica */
 }
 
