FIoi top ora si carica il reperto se ci fai il click sopra

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,10 +50,10 @@
     <button type="submit" class="search-button">Cerca Chiesa</button>
 </form>
 
-<form id="search_form_reperto" action="/search" method="GET">
+<form id="search_form_reperto" action="/search_reperto" method="GET">
     <label for="reperto_input">Codice Reperto:</label><br>
     <input type="text" id="reperto_input" name="query"><br>
-    <button type="submit" id="search_button_reperto" class="search-button" disabled>Cerca Reperto</button>
+    <button type="submit" class="search-button">Cerca Reperto</button>
 </form>
 
 <div class="map-container">
