--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+    <meta charset="UTF-8">
+    <title>Ricerca Chiesa e Reperto</title>
     <link rel="stylesheet" href="/static/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <meta charset="UTF-8">
-    <title>Risultati Ricerca</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://js.arcgis.com/4.23/esri/themes/light/main.css">
     <script src="https://js.arcgis.com/4.23/"></script>
@@ -40,21 +40,107 @@
             });
         });
     </script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
 
+        .container {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            color: #8B4513;
+            text-align: center;
+            width: 100%;
+            margin-bottom: 40px;
+        }
+
+        form {
+            width: 45%;
+            margin-bottom: 20px;
+        }
+
+        label {
+            font-size: 1.6rem;
+            font-weight: bold;
+            color: #8B4513;
+            margin-bottom: 10px;
+            display: block;
+        }
+
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            font-size: 1.4rem;
+            border: 2px solid #8B4513;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+
+        .search-button {
+            width: 100%;
+            padding: 10px;
+            font-size: 1.6rem;
+            font-weight: bold;
+            background-color: #8B4513;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .search-button:hover {
+            background-color: #963;
+        }
+
+        .map-container {
+            width: 100%;
+            height: 500px; /* Aggiunto per garantire una dimensione definita */
+            text-align: center;
+        }
+
+        .custom-div {
+            background-color: #f9f9f9;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            height: 100%; /* Aggiunto per garantire una dimensione definita */
+        }
+
+        #viewDiv {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-<h1>Ricerca Chiesa</h1>
-<form id="search_form_chiesa" action="/" method="GET">
-    <label for="chiesa_input">Inserisci il nome della chiesa:</label><br>
-    <input type="text" id="chiesa_input" name="query"><br>
-    <button type="submit" class="search-button">Cerca Chiesa</button>
-</form>
+<h1>Ricerca Chiesa e Reperto</h1>
+<div class="container">
+    <form id="search_form_chiesa" action="/" method="GET">
+        <label for="chiesa_input">Cerca Chiesa:</label>
+        <input type="text" id="chiesa_input" name="query" placeholder="Inserisci il nome della chiesa...">
+        <button type="submit" class="search-button">Cerca</button>
+    </form>
 
-<form id="search_form_reperto" action="/search_reperto" method="GET">
-    <label for="reperto_input">Codice Reperto:</label><br>
-    <input type="text" id="reperto_input" name="query"><br>
-    <button type="submit" class="search-button">Cerca Reperto</button>
-</form>
+    <form id="search_form_reperto" action="/search_reperto" method="GET">
+        <label for="reperto_input">Cerca Reperto:</label>
+        <input type="text" id="reperto_input" name="query" placeholder="Inserisci il codice del reperto...">
+        <button type="submit" class="search-button">Cerca</button>
+    </form>
+</div>
 
 <div class="map-container">
     <div class="custom-div" id="viewDiv"></div>
