modifica stile login

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,10 @@
     <button type="submit" class="search-button">Cerca Reperto</button>
 </form>
 
+<form action="/login">
+    <button type="submit">Login</button>
+</form>
+
 <div class="map-container">
     <div class="custom-div" id="viewDiv"></div>
 </div>
