aggiornato index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -124,6 +124,27 @@
             width: 100%;
             height: 100%;
         }
+
+        .login-button {
+            width: 200px;
+            padding: 10px;
+            font-size: 1.6rem;
+            font-weight: bold;
+            background-color: #8B4513;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            text-decoration: none;
+            text-align: center;
+            display: block;
+            margin: 20px auto;
+        }
+
+        .login-button:hover {
+            background-color: #963;
+        }
     </style>
 </head>
 <body>
@@ -145,6 +166,8 @@
 <div class="map-container">
     <div class="custom-div" id="viewDiv"></div>
 </div>
+
+<a href="/login" class="login-button">Login</a>
 
 </body>
 </html>
