--- a/templates/result.html
+++ b/templates/result.html
@@ -6,9 +6,29 @@
     <title>Risultati della Ricerca per "{{ query }}"</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/style.css">
-
+    <style>
+        #home-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 1000;
+            background-color: #4A3427;
+            color: #FFF;
+            border: 2px solid #3E2C20;
+            box-shadow: 2px 2px 5px #2C1E15;
+            font-family: 'Times New Roman', serif;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        #home-button:hover {
+            background-color: #5C4837;
+        }
+    </style>
 </head>
 <body>
+<a href="/" class="btn btn-primary" id="home-button">Torna alla Homepage</a>
 <div class="container">
     <!-- Modal per l'immagine ingrandita -->
     <div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
@@ -41,7 +61,7 @@
         <div class="col-md-4 mb-4">
             <div class="card">
                 {% if immagini[i] %}
-                <img src="/path/to/placeholder.jpg"
+                <img src="caricamento.jpg"
                      data-src="{{ immagini[i] }}"
                      alt="Immagine del reperto"
                      class="card-img-top lazyload"
@@ -107,5 +127,7 @@
     });
 
 </script>
+
+
 </body>
 </html>
