--- a/templates/clickReperto.html
+++ b/templates/clickReperto.html
@@ -34,25 +34,6 @@
 <div class="container">
     <div class="header">
         <h1>Dettagli del Reperto</h1>
-        <div class="reperto-info">
-            <h2>Codice del Reperto: {{ reperto }}</h2>
-            {% if immagini %}
-                <img src="{{ immagini }}" alt="Immagine del Reperto">
-            {% else %}
-                <p>Nessuna immagine disponibile per questo reperto.</p>
-            {% endif %}
-            {% if scritte %}
-                <h3>Trascrizione:</h3>
-                <p>{{ scritte }}</p>
-            {% else %}
-                <p>Nessuna trascrizione disponibile per questo reperto.</p>
-            {% endif %}
-        </div>
-        <a class="link" href="/">Torna alla ricerca</a>
-    </div>
-
-    <a href="{{ url_for('login', next=request.url) }}" class="login-button">Login</a>
-
         <button class="button" onclick="toggleTranslate()">Traduci</button>
     </div>
     <div class="reperto-info">
@@ -99,4 +80,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
-
+</html>
