--- a/templates/result.html
+++ b/templates/result.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Risultati della Ricerca per "{{ query }}"</title>
+    <title>Risultati della Ricerca per "{{ chiesa }}"</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/style.css">
     <style>
@@ -24,6 +24,11 @@
         }
         #home-button:hover {
             background-color: #5C4837;
+        }
+
+        .card-img-top {
+            max-height: 150px; /* Imposta l'altezza massima dell'icona */
+            object-fit: cover; /* Assicura che l'icona mantenga le proporzioni */
         }
     </style>
 </head>
@@ -58,24 +63,22 @@
     </div>
     <div class="row" id="repertiRow" style="display: none;">
         {% for i in range(reperti|length) %}
-        <div class="col-md-4 mb-4">
-            <div class="card">
-                {% if immagini[i] %}
-                <img src="caricamento.jpg"
-                     data-src="{{ immagini[i] }}"
-                     alt="Immagine del reperto"
-                     class="card-img-top lazyload"
-                     loading="lazy">
-                {% endif %}
-                <div class="card-body">
-                    <h5 class="card-title">{{ reperti[i] }}</h5>
-                    <p class="card-text">{{ scritte[i] }}</p>
-                    <!-- Bottone Dettagli che porta alla pagina del reperto specifico -->
-                    <a href="{{ url_for('search_reperto', query=reperti[i].split('-')[-1].strip()) }}" class="btn btn-primary">Dettagli</a>
-
+            <div class="col-md-3 mb-4"> <!-- Imposta le dimensioni delle colonne per visualizzare più reperti per riga -->
+                <div class="card">
+                    {% if immagini[i] %}
+                        <img src="caricamento.jpg"
+                             data-src="{{ immagini[i] }}"
+                             alt="Immagine del reperto"
+                             class="card-img-top lazyload"
+                             loading="lazy">
+                    {% endif %}
+                    <div class="card-body">
+                        <h5 class="card-title">{{ reperti[i] }}</h5>
+                        <!-- Bottone Dettagli che porta alla pagina del reperto specifico -->
+                        <a href="{{ url_for('search_reperto', query=reperti[i].split('-')[-1].strip()) }}" class="btn btn-primary">Dettagli</a>
+                    </div>
                 </div>
             </div>
-        </div>
         {% endfor %}
     </div>
 </div>
