--- a/templates/clickReperto.html
+++ b/templates/clickReperto.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>Dettaglio Reperto</title>
+    <title>Artifact's Detail</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -76,43 +76,44 @@
 
 </head>
 <body>
+<a href="/" class="btn btn-primary" id="home-button">Torna alla Homepage</a>
 <div class="container mt-4">
     <div class="header">
-        <h1>Dettagli del Reperto</h1>
-        <button class="button" onclick="toggleTranslate()">Traduci</button>
+        <h1>Artifact's Details</h1>
+        <button class="button" onclick="toggleTranslate()">Translate</button>
     </div>
     <div class="details-container">
         <div class="img-container">
             {% if immagini %}
                 <img src="{{ immagini }}" alt="Immagine del Reperto" class="img-fluid">
             {% else %}
-                <p>Nessuna immagine disponibile per questo reperto.</p>
+                <p>No image avaiable for this artifact.</p>
             {% endif %}
         </div>
         <div class="info-block">
-            <h2>Codice del Reperto: {{ reperto }}</h2>
+            <h2>Artifact Code: {{ reperto }}</h2>
             {% if condition %}
-                <h5>Condizione</h5>
+                <h5>Condition</h5>
                 <p>{{ condition }}</p>
             {% endif %}
             {% if length %}
-                <h6>Lunghezza</h6>
+                <h6>Length</h6>
                 <p>{{ length }}</p>
             {% endif %}
             {% if width %}
-                <h6>Larghezza</h6>
+                <h6>Width</h6>
                 <p>{{ width }}</p>
             {% endif %}
             {% if material %}
-                <h6>Materiale</h6>
+                <h6>Material</h6>
                 <p>{{ material }}</p>
             {% endif %}
             {% if shape %}
-                <h6>Forma</h6>
+                <h6>Shape</h6>
                 <p>{{ shape }}</p>
             {% endif %}
             {% if type %}
-                <h6>Tipo</h6>
+                <h6>Type</h6>
                 <p>{{ type }}</p>
             {% endif %}
         </div>
@@ -120,22 +121,22 @@
     <div class="row">
         <div class="col-12">
             {% if scritte %}
-                <h3>Trascrizione:</h3>
+                <h3>Trascription:</h3>
                 <p>{{ scritte }}</p>
             {% else %}
-                <p>Nessuna trascrizione disponibile per questo reperto.</p>
+                <p>No trascription avaiable for this artifact.</p>
             {% endif %}
             {% if traduzione %}
-                <h4>Traduzione</h4>
+                <h4>Traduction</h4>
                 <p>{{ traduzione }}</p>
             {% else %}
-                <p>Nessuna traduzione disponibile per questo reperto.</p>
+                <p>No traduction avaible for this artifacts.</p>
             {% endif %}
         </div>
     </div>
     <div class="hidden" id="translateForm">
-        <textarea rows="4" placeholder="Inserisci qui la traduzione..."></textarea>
-        <button class="button">Invia Traduzione</button>
+        <textarea rows="4" placeholder="Type here your traduction..."></textarea>
+        <button class="button">Send Traduction</button>
     </div>
 </div>
 
@@ -153,5 +154,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
